--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="icon" href="icons/rock-emoji.png" type="image/x-icon" />
-    <title>Rock, Paper, Scissors</title>
+    <title>BATO BATO PIK</title>
     <style>
       body {
         color: white;
@@ -53,7 +53,7 @@
     </style>
   </head>
   <body>
-    <p class="heading">Rock Paper Scissors</p>
+    <p class="heading">Bato Bato Pik</p>
 
     <button
       onclick="
@@ -114,33 +114,33 @@
         let result = "";
         if (playerMove === "scissors") {
           if (computerMove === "rock") {
-            result = "You lose.";
+            result = "Bawi nalang.";
           } else if (computerMove === "paper") {
-            result = "You win!";
+            result = "Panalo ka!";
           } else if (computerMove === "scissors") {
             result = "Tie.";
           }
         } else if (playerMove === "paper") {
           if (computerMove === "rock") {
-            result = "You win!";
+            result = "Panalo ka!";
           } else if (computerMove === "paper") {
             result = "Tie.";
           } else if (computerMove === "scissors") {
-            result = "You lose.";
+            result = "Bawi nalang.";
           }
         } else if (playerMove === "rock") {
           if (computerMove === "rock") {
             result = "Tie.";
           } else if (computerMove === "paper") {
-            result = "You lose.";
+            result = "Bawi nalang.";
           } else if (computerMove === "scissors") {
-            result = "You win!";
+            result = "Panalo ka!";
           }
         }
 
-        if (result === "You win!") {
+        if (result === "Panalo ka!") {
           score.wins += 1;
-        } else if (result === "You lose.") {
+        } else if (result === "Bawi nalang.") {
           score.losses += 1;
         } else if (result === "Tie.") {
           score.ties += 1;
