--- a/index.html
+++ b/index.html
@@ -2,55 +2,8 @@
 <html>
   <head>
     <link rel="icon" href="icons/rock-emoji.png" type="image/x-icon" />
+    <link rel="stylesheet" href="10-rock-paper-scissors.css" />
     <title>BATO BATO PIK</title>
-    <style>
-      body {
-        color: white;
-        background-color: rgb(25, 25, 25);
-        font-family: Arial;
-        font-size: 16px;
-      }
-      .heading {
-        font-size: 30px;
-        font-weight: bold;
-      }
-      .result {
-        font-size: 25px;
-        font-weight: bold;
-        margin-top: 20px;
-      }
-      .move-icon {
-        max-width: 50px;
-        background-color: transparent;
-      }
-      .move-button {
-        background-color: transparent;
-        padding: 30px;
-        margin: 5px;
-        border-color: white;
-        border-width: 3px;
-        border-style: solid;
-        border-radius: 100px;
-        transition: background-color 0.15s;
-        cursor: pointer;
-      }
-      .move-button:hover {
-        background-color: rgb(244, 246, 197);
-      }
-      .reset-score-button {
-        padding: 10px 15px;
-        font-size: 16px;
-        border: none;
-        background-color: white;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background-color, font-weight 0.15s;
-      }
-      .reset-score-button:hover {
-        background-color: rgb(244, 246, 197);
-        font-weight: bold;
-      }
-    </style>
   </head>
   <body>
     <p class="heading">Bato Bato Pik</p>
@@ -99,82 +52,6 @@
       Reset Score
     </button>
 
-    <script>
-      let score = JSON.parse(localStorage.getItem("score")) || {
-        wins: 0,
-        losses: 0,
-        ties: 0,
-      };
-
-      updateScoreElement();
-      updateResult();
-
-      function playGame(playerMove) {
-        const computerMove = pickComputerMove();
-        let result = "";
-        if (playerMove === "scissors") {
-          if (computerMove === "rock") {
-            result = "Bawi nalang.";
-          } else if (computerMove === "paper") {
-            result = "Panalo ka!";
-          } else if (computerMove === "scissors") {
-            result = "Tie.";
-          }
-        } else if (playerMove === "paper") {
-          if (computerMove === "rock") {
-            result = "Panalo ka!";
-          } else if (computerMove === "paper") {
-            result = "Tie.";
-          } else if (computerMove === "scissors") {
-            result = "Bawi nalang.";
-          }
-        } else if (playerMove === "rock") {
-          if (computerMove === "rock") {
-            result = "Tie.";
-          } else if (computerMove === "paper") {
-            result = "Bawi nalang.";
-          } else if (computerMove === "scissors") {
-            result = "Panalo ka!";
-          }
-        }
-
-        if (result === "Panalo ka!") {
-          score.wins += 1;
-        } else if (result === "Bawi nalang.") {
-          score.losses += 1;
-        } else if (result === "Tie.") {
-          score.ties += 1;
-        }
-
-        localStorage.setItem("score", JSON.stringify(score));
-
-        updateScoreElement();
-        document.querySelector(".js-result").innerHTML = result;
-
-        document.querySelector(".js-moves").innerHTML = `You
-      <img src="icons/${playerMove}-emoji.png" alt="rock" class="move-icon" />
-      <img src="icons/${computerMove}-emoji.png" alt="scissors" class="move-icon" />
-      Computer`;
-      }
-
-      function pickComputerMove() {
-        const randomNumber = Math.random();
-        let computerMove = "";
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-          computerMove = "rock";
-        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-          computerMove = "paper";
-        } else {
-          computerMove = "scissors";
-        }
-        return computerMove;
-      }
-
-      function updateScoreElement() {
-        document.querySelector(
-          ".js-score"
-        ).innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-      }
-    </script>
+    <script src="10-rock-paper-scissors.js"></script>
   </body>
 </html>
