--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="icon" href="icons/rock-emoji.png" type="image/x-icon" />
-    <link rel="stylesheet" href="10-rock-paper-scissors.css" />
+    <link rel="stylesheet" href="rock-paper-scissors.css" />
     <title>BATO BATO PIK</title>
   </head>
   <body>
@@ -52,6 +52,6 @@
       Reset Score
     </button>
 
-    <script src="10-rock-paper-scissors.js"></script>
+    <script src="rock-paper-scissors.js"></script>
   </body>
 </html>
